<resources>
    <string name="app_name">Boemboe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="article">Article</string>
    <string name="for_camera">camera</string>
    <string name="switch_camera">switchCamera</string>
    <string name="take_photo">takePhoto</string>
    <string name="preview_image">previewImage</string>
    <string name="gallery">gallery</string>
    <string name="detail">detail</string>
    <string name="image_user">imageUser</string>
    <string name="image_item">imageItem</string>

    <string name="capture_the_spice_image">Capture The Spice Image</string>
    <string name="spices_image">Spices Image</string>
    <string name="output">Output:</string>
    <string name="result_here">Result here</string>
    <string name="click_on_the_result_text_to_detail">Click on the result text to detail</string>
    <string name="imagespice">imageSpices</string>
    <string name="text_spices">Text Spices</string>
    <string name="title">Kunyit</string>
    <string name="imagepreview">imagePreview</string>
    <string name="description">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet. In error facilis et beatae consequatur eos eligendi earum sit dolores sunt. Et cupiditate eaque aut dolor ratione qui rerum voluptatem et accusamus dolore. Et totam itaque est distinctio maiores ea omnis libero At explicabo commodi est doloribus similique est similique magni.</string>
    <string name="label">Label</string>
    <string name="efficacy">Efficacy</string>
    <string name="detectspices">detectSpices</string>

    <string name="emailValidation_alert">Invalid Email, Must using @mail</string>
    <string name="passwordValidation_alert">Password less than 6 character</string>
    <string name="boemboe">Boemboe</string>
    <string name="sign_up_to_continue">Sign Up To Continue</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="welcome_to">Welcome To,</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="cooking">Cooking</string>
    <string name="benefit">Benefit</string>
    <string name="image_splashscreen">Image SplashScreen</string>
    <string name="detect_spices">Detect Spices</string>
    <string name="logout">Logout</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="title_article">Article</string>
    <string name="title_market">Market</string>
    <string name="title_about">About</string>
    <string name="about_us">About Us</string>
    <string name="boemboe_team">Team</string>
    <string name="profile1">Ahmad Rizky - M2001G0003 - Institut Pertanian Bogor</string>
    <string name="profile2">Maylida Izattul Wardah - M2204G1901 - Universitas Esa Unggul</string>
    <string name="profile3">Muhammad Rizky Maulana - A2211G1944 - Universitas Indrapsrasta</string>
    <string name="profile4">Muhammad Shiratul Haq - A2009F0989 - Universitas Gunadarma</string>
    <string name="profile5">Hanna Marchela Stephanie Tampubolon - C2005G0427 - Universitas Bina Nusantara</string>
    <string name="profile6">Yuaris Arham - C7128F1568 - Politeknik Negeri Jakarta</string>
    <string name="under_construction_images">Under Construction Images</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="about">About</string>
    <string name="boemboe_desc">Boemboe is application for helping people who want to know the types of Indonesian spices and their benefits in an easy way.</string>
    <string name="boemboe_desc2">Hopefully, this application will educate people who want to learn about spices in Indonesia.</string>
    <string name="images_previews">Images Previews</string>
</resources>