<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit2022.boemboe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.bangkit2022.boemboe.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article"/>

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.bangkit2022.boemboe.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market"/>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.bangkit2022.boemboe.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about"/>

</navigation>